Se expone api para mascota y se hace refactor al api del alimentador